Fix smooth transition animation for ExpandingOptions on mobile

--- a/frontend/src/components/jersey/ExpandingOptions.module.css
+++ b/frontend/src/components/jersey/ExpandingOptions.module.css
@@ -25,7 +25,7 @@
   }
 
   .option.active {
-    flex-grow: 100;
+    flex-grow: 10000;
     max-width: unset;
     max-height: 280px;
     margin: 4px 0;
@@ -34,7 +34,6 @@
 
   .option:not(.active) {
     flex-grow: 1;
-    height: 55px;
   }
 }
 
